<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBacksground"
    tools:context=".VerifyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/verifyyouracccountTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veri_your_account_TX"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/verifycationcodeemailTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/email_veri_message_TX"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/verifycationcodeET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#b3e0f4"
            android:hint="@string/enter_verify__ET"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sendBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_button_blue"
            android:minHeight="55dp"
            android:text="@string/send_BT"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/verifycationresendTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/doesnt_get_code_TX"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>