<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".UserHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header_user"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/ic_header_profile">

            <ImageView
                android:id="@+id/side_menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_side_menu" />

            <ImageView
                android:id="@+id/bel_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_notification" />

        </RelativeLayout>

        <View
            android:id="@+id/separator_user"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/header_user"
            android:background="@color/separator" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/photo_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/separator_user"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-56dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/nama_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photo_profile"
            android:layout_centerHorizontal="true"
            android:text="@string/nama_TX"
            android:textColor="@color/colorBacksground"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blood_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama_user"
            android:layout_centerHorizontal="true"
            android:text="@string/blood_type_TX"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <View
            android:id="@+id/separator_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/blood_type"
            android:layout_marginTop="8dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator_top"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/blood_give"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/blood_give_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/blood_give__total_TX"
                    android:textColor="@color/colorBacksground"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/blood_give_TX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/blood_give_TX"
                    android:textAllCaps="true"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blood_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/blood_received_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/blood_received_total_TX"
                    android:textColor="@color/colorBacksground"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/blood_received_TX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/blood_received_TX"
                    android:textAllCaps="true"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/thanks_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/thanks_total_TX"
                    android:textColor="@color/colorBacksground"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thanksTX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/thankTX"
                    android:textAllCaps="true"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/separator_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/spec"
            android:layout_marginTop="8dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/menu_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator_bottom"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_donor" />

                <TextView
                    android:id="@+id/search_donor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_donor_TX"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/search_donor_near"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_donor_near_TX"
                    android:textColor="@color/text3"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blood_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/blood_need_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_blood_needed" />

                <TextView
                    android:id="@+id/blood_needed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_need_TX"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/blodd_need_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_need_total_TX"
                    android:textColor="@color/text3"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/message_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message" />

                <TextView
                    android:id="@+id/messageTX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_TX"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/new_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_message_TX"
                    android:textColor="@color/text3"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/donor_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/donor_history_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_donor_history" />

                <TextView
                    android:id="@+id/donor_historyTX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donor_history_TX"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_donor_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_donor_history_TX"
                    android:textColor="@color/text3"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>