<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBacksground"
    tools:context=".AlmostThereActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/almosttherTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost_there_TX"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/thanksTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/thanks_TX"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/verifyBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_button_blue"
            android:minHeight="55dp"
            android:text="@string/verify_BT"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>