<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBacksground"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                app:srcCompat="@drawable/ic_welcome_logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUsernamePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/username_ET"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/password_ET"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutButtonRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_blue"
                android:minHeight="55dip"
                android:text="@string/login_BT"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/orTX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/or_TX"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <Button
                android:id="@+id/con_fbBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_blue"
                android:drawableLeft="@drawable/ic_welcome_fb_login"
                android:drawablePadding="20dp"
                android:minHeight="55dip"
                android:paddingLeft="35dp"
                android:paddingRight="30dp"
                android:text="@string/con_fb_BT"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/registerTX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/register_TX"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>